# scrubarr

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  codeql.yml  fast-forward.yml  pull-request.yml
client/: Cargo.toml
client/src/: config.rs  instance.rs  main.rs
sonarr_api/: Cargo.toml
sonarr_api/src/: error.rs  lib.rs
sonarr_api/src/endpoints/: command.rs  queue.rs
sonarr_api/src/schema/: queue.rs  series.rs
src/: instance.rs  main.rs
