[workspace]

default-members = ["client"]
members = [
    "client",
    "sonarr_api"
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
sonarr_api = {path = "sonarr_api" }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }