[package]
name = "scrubarr"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive","env"] }
dotenv = "0.15.0"
log = { workspace = true }
log4rs = "1.3.0"
sonarr_api = { workspace = true }
tokio = { version = "1.41.1", features = ["full"] }
url = { workspace = true }