[package]
name = "scrubarr"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive","env"] }
config = "0.14"
directories-next = "2"
dotenv = "0.15"
log = { workspace = true }
log4rs = "1"
is_empty = "0.3"
sonarr_api = { workspace = true }
tokio = { version = "1", features = ["full"] }
url = { workspace = true }
serde = { workspace = true }
serde_json = "1"
zeroize = {version = "1", features = ["serde"]}