[package]
name = "sonarr_api"
version = "0.2.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
log = { workspace = true }
reqwest = { version = "0.12.9", features = ["cookies","json"] }
serde = { version = "1.0.215", features = ["derive"] }
struct_iterable = "0.1.1"
thiserror = "2.0.3"
tokio = {workspace = true}
url = { workspace = true }